--- a/style.css
+++ b/style.css
@@ -36,18 +36,23 @@ width: 100%;
 
 }
 .left {
-height: 100%;
+height: 150%;
 width: 20%;
 background-color: rgb(0, 0, 0); 
 float: left;
 }
 .main {
-height: 100%;
+height: 150%;
 width: 80%;
-background-color: rgba(99, 221, 99, 0.726);
+background-image: url('bearinamug.gif');
+background-size: 100%;
 float: right;
 font-size: 80px;
 text-align: center;
+color: rgb(255, 0, 149);
+text-shadow: 2px 3px rgb(0, 255, 0)
+
+
 }
 .timerText {
     padding-top: 400px;
